# RAG-Powered-AI-Assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/ragssitant/agent/: mistral.py
src/ragssitant/db/: persistant_db.py
